{
    "name": "PlayerAction",
    "maps": [
        {
            "name": "Rod",
            "id": "b3370059-b24f-477c-a252-104719c21cf0",
            "actions": [
                {
                    "name": "ThrowHook",
                    "type": "Value",
                    "id": "41c5502a-81fa-46ca-8eba-0f903ea7b300",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RollingUp",
                    "type": "Value",
                    "id": "0bcf68ef-646d-4d94-aae7-3f20794851d2",
                    "expectedControlType": "Double",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "FightWithFish",
                    "type": "Value",
                    "id": "b60ccea7-c471-46ec-935e-2ca71d3198b3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c211d161-10dd-4792-81a1-de9ba02a3ba1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrowHook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8389e807-945d-4020-aa02-fa97378fa73b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RollingUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "A/D Move",
                    "id": "9353b908-f809-424e-9d8b-6af0e017f98d",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FightWithFish",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "07dcfeac-2640-4f2f-b506-9e560cbec828",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FightWithFish",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "489b0bc9-1d6e-4dd7-903d-9911980179e7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FightWithFish",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left/Right Move",
                    "id": "e49f6411-5768-488d-ae16-130cf1249282",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FightWithFish",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "53fe8884-79ab-4c8a-a253-30d7bf4bcec2",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FightWithFish",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "05338526-94bf-4ad0-bcc3-33b137081e8f",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FightWithFish",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "UI",
            "id": "56d71515-79c6-451a-9cb6-f7a800775110",
            "actions": [
                {
                    "name": "OpenCataloge",
                    "type": "Button",
                    "id": "10882122-28f2-45fe-b2e7-119e90d59fe9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenShop",
                    "type": "Button",
                    "id": "c8c559cc-0436-4927-830e-5cb902d92221",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9a3144b9-87cd-4148-8932-64d96cbecd73",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenCataloge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c37a1b07-d2cc-4bbf-99c6-75c3dd60c8b6",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenShop",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}